# sgcount

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml  index.md  justfile
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/: _config.yml  index.md
docs/_site/: 404.html  feed.xml  index.html
docs/_site/about/: index.html
docs/_site/implementation/: index.html
docs/_site/install/: index.html
docs/_site/pages/: usage.html
docs/pages/: about.md  install.md
example/: counts.txt  g2s.txt  generate_example.py  library.fa  sequence.fq
pages/: about.md  implementation.md  requirements.md  usage.md
src/: count.rs  counter.rs  genemap.rs  hamming.rs  library.rs  main.rs  offsetter.rs  permutes.rs  progress.rs  results.rs  trimmer.rs  utils.rs
