[package]
name = "sgcount"
version = "0.1.22"
edition = "2021"
description = "A fast and flexible sgRNA counter"
license = "MIT"
documentation = "https://docs.rs/sgcount"
repository = "https://github.com/noamteyssier/sgcount"
homepage = "https://noamteyssier.github.io/sgcount"
keywords = ["cli", "CRISPR", "bioinformatics", "sequencing", "sgRNA"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxread = "0.2"
hashbrown = "0.12"
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
rayon = "1.5"
ndarray = "0.15"
ndarray-stats = "0.5"
bstr = "0.2.17"
indicatif = { version = "0.16.2", features = ["rayon"] }
