[package]
name = "sgcount"
version = "0.1.32"
edition = "2021"
description = "A fast and flexible sgRNA counter"
license = "MIT"
documentation = "https://docs.rs/sgcount"
repository = "https://github.com/noamteyssier/sgcount"
homepage = "https://noamteyssier.github.io/sgcount"
keywords = ["cli", "CRISPR", "bioinformatics", "sequencing", "sgRNA"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bstr = "1.5.0"
clap = { version = "4.5.0", features = ["derive"] }
fxread = "0.2.5"
hashbrown = "0.14.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
rayon = "1.7.0"
